# graphicLab_3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
3DModel/: Model.cpp  Model.h
3DModel/Polygon/: Polygon.cpp  Polygon.h
AffineTranslate/: AffineTransform.cpp  AffineTransform.h
AffineTranslate/Matrix/: Matrix.cpp  Matrix.h
AffineTranslate/Vector/: Vector.cpp  Vector.h  Vector3D.cpp  Vector3D.h
Canvas/: Canvas.cpp  Canvas.h
